feat(events): enhance event creation form with advanced validation and dynamic inputs
- Add comprehensive validation for basic info, date/time, and location steps
- Integrate timezone selection and dynamic duration calculation
- Implement step validation to control form progression
- Add new constants for event categories
- Update form data types to support more complex input scenarios

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["node", "react", "@mui/icons-material", "@mui/material"]
+    "types": ["node", "react", "@mui/icons-material", "@mui/material", "@mui/x-date-pickers"]
   },
   "include": [
     "./.eslintrc.json",
