--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@mui/lab": "^5.0.0-alpha.119",
     "@mui/material": "^5.11.8",
     "@mui/x-data-grid-premium": "^5.17.26",
-    "@mui/x-date-pickers": "^6.0.4",
+    "@mui/x-date-pickers": "^6.19.6",
     "@next/font": "^14.2.3",
     "@react-google-maps/api": "^2.20.6",
     "@types/node": "18.11.18",
     "@types/react-dom": "^18.2.17",
-    "dayjs": "^1.11.7",
+    "dayjs": "^1.11.10",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.0.3",
     "framer-motion": "^9.0.4",
@@ -42,6 +42,7 @@
     "react-i18next": "^14.1.1",
     "react-leaflet": "^4.2.1",
     "react-quill": "^2.0.0",
+    "react-timezone-select": "^3.2.8",
     "swr": "^2.0.1",
     "ts-key-enum": "^2.0.12",
     "yup": "^1.0.0"
