feat(events): add invite step and event creation success flow
- Implement InviteStep component for email and link sharing
- Add final success screen with event creation confirmation
- Enhance event creation workflow with improved navigation and validation
- Integrate URL validation and email invite functionality
- Update create event page to support final submission step

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.43.1",
     "react-i18next": "^14.1.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^7.1.5",
     "react-timezone-select": "^3.2.8",
     "swr": "^2.0.1",
     "ts-key-enum": "^2.0.12",
