--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ NEXT_PUBLIC_APP_DESCRIPTION=Description # Change this to your application's desc
 NEXT_PUBLIC_AUTH_ENABLED=true # true: Authentication is required for accessing certain parts of the app. false: Authentication is disabled, and all parts of the app are accessible without it.
 NEXT_PUBLIC_ENVIRONMENT=local  # local, staging, preprod, prod
 NEXT_PUBLIC_UNDER_MAINTENANCE=true
+NEXT_PUBLIC_MAPBOX_TOKEN= # Mapbox token for mapbox maps
