--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "^14.0.3",
     "framer-motion": "^9.0.4",
     "i18next": "^23.11.2",
+    "i18next-http-backend": "^3.0.2",
     "lodash": "^4.17.21",
     "mapbox-gl": "^3.10.0",
     "mui-tel-input": "^3.1.3",
